[gd_scene load_steps=5 format=3 uid="uid://d3hgjj7rr0yym"]

[ext_resource type="Script" path="res://scripts/crab.gd" id="1_o6u8v"]
[ext_resource type="Texture2D" uid="uid://dqo6lqo86nq0w" path="res://assets/sprites/crab.png" id="2_42pdl"]
[ext_resource type="PackedScene" uid="uid://c5fe7mvbpn53j" path="res://scenes/killzone.tscn" id="3_wqeyh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87a1y"]
size = Vector2(48, 23)

[node name="Crab" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_o6u8v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_42pdl")

[node name="Killzone" parent="." instance=ExtResource("3_wqeyh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_87a1y")

[node name="ExaustedTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="RunningTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(40, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-40, 0)

[connection signal="timeout" from="ExaustedTimer" to="." method="_on_exausted_timer_timeout"]
[connection signal="timeout" from="RunningTimer" to="." method="_on_running_timer_timeout"]
